電腦版換裝 done

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <div class="row py-5">
         <div class="col-lg-3">
             <div class="d-flex flex-column align-items-center justify-content-between h-100">
-                <div class="col-lg-8 dress-accessory-box move-up-half bg-accessory-linear">
 
+                <div class="col-lg-8 dress-accessory-box move-up-half bg-accessory-linear">
                     <!-- 配件 eyes -->
                     <div class="swiper dress-eyes">
                         <div class="swiper-wrapper">
@@ -170,16 +170,13 @@
                             <div class="swiper-slide"><img src="assets/layers/eyes/E10_09.png" class="img-fluid" /></div>
                         </div>
                         <div class="swiper-pagination"></div>
-
                         <div class="swiper-scrollbar"></div>
                     </div>
                     <div class="swiper-button-prev dress-eyes dress-btn move-left-4 btn bg-base text-white"><</div>
                     <div class="swiper-button-next dress-eyes dress-btn move-right-4 btn bg-base text-white">></div>
-
                 </div>
+
                 <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
-
-
                     <!-- 配件 clothes -->
                     <div class="swiper dress-clothes">
                         <div class="swiper-wrapper">
@@ -195,15 +192,12 @@
                             <div class="swiper-slide"><img src="assets/layers/clothes/C10_15.png" class="img-fluid"/></div>
                         </div>
                         <div class="swiper-pagination"></div>
-
                         <div class="swiper-scrollbar"></div>
                     </div>
                     <div class="swiper-button-prev dress-clothes dress-btn move-left-4 btn bg-base text-white"><</div>
                     <div class="swiper-button-next dress-clothes dress-btn move-right-4 btn bg-base text-white">></div>
-
-
-
                 </div>
+
             </div>
         </div>
         <div class="col-lg-6">
@@ -214,8 +208,8 @@
                     <div class="main-body-box mx-5 px-5">
 
                         <div class="main-body">
-                            <!-- 主體 eyes -->
-                            <div class="swiper dress-eyes">
+                            <!-- 主體 eyes 眼睛 -->
+                            <div class="swiper dress-eyes" style="z-index: 4">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"><img src="assets/layers/eyes/E1_25.png" class="img-fluid"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/eyes/E2_15.png" class="img-fluid"/></div>
@@ -231,8 +225,8 @@
                             </div>
                         </div>
                         <div class="main-body">
-                            <!-- 主體 clothes -->
-                            <div class="swiper dress-clothes">
+                            <!-- 主體 clothes 衣服 -->
+                            <div class="swiper dress-clothes" style="z-index: 2">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide"><img src="assets/layers/clothes/C1_25.png" class="img-fluid"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/clothes/C2_09.png" class="img-fluid"/></div>
@@ -247,9 +241,46 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="main-body" style="z-index: 3">
+                            <!-- 主體 hair 頭髮 -->
+                            <div class="swiper dress-hair">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H1_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H2_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H3_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H4_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H5_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H6_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H7_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H8_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H9_01.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/hair/H10_09.png" class="img-fluid"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-body" style="z-index: 0">
+                            <!-- 主體 background 背景色 -->
+                            <div class="swiper dress-background">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG1_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG2_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG3_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG4_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG5_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG6_25.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG7_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG8_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG9_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG10_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/background/BG11_01.png" class="img-fluid"/></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-body" style="z-index: 1">
+                            <!-- 主體 body 身體 -->
+                            <img src="assets/layers/skins/Body.png" class="img-fluid"/>
+                        </div>
                     </div>
-
 
                 </div>
             </div>
@@ -257,11 +288,48 @@
 
         <div class="col-lg-3">
             <div class="d-flex flex-column align-items-center justify-content-between h-100">
-                <div class="col-lg-8 move-up-half">
-                    <img class="img-fluid" src="assets/image/try1.png"/>
+                <div class="col-lg-8 dress-accessory-box move-up-half bg-accessory-linear">
+                    <!-- 配件 hair -->
+                    <div class="swiper dress-hair">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/hair/H1_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H2_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H3_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H4_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H5_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H6_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H7_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H8_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H9_01.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/hair/H10_09.png" class="img-fluid"/></div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                    <div class="swiper-button-prev dress-hair dress-btn move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-hair dress-btn move-right-4 btn bg-base text-white">></div>
                 </div>
-                <div class="col-lg-8 move-down-half">
-                    <img class="img-fluid" src="assets/image/try1.png"/>
+                <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
+                    <!-- 配件 background -->
+                    <div class="swiper dress-background">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/layers/background/BG1_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG2_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG3_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG4_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG5_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG6_25.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG7_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG8_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG9_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG10_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/background/BG11_01.png" class="img-fluid"/></div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                    <div class="swiper-button-prev dress-background dress-btn move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-background dress-btn move-right-4 btn bg-base text-white">></div>
                 </div>
             </div>
         </div>
