--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="description" content="BWANA! Create your own WAVATAR." />
+    <meta property="og:title" content="BWANA! Create your own WAVATAR." />
+    <!-- <meta property="og:image" content="">-->
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assets/lib/swiper/swiper-bundle.css">
@@ -158,16 +161,11 @@
                     <!-- 配件 eyes -->
                     <div class="swiper dress-eyes">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E1_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E2_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E3_01.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E4_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E5_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E6_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E7_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E8_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E9_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/eyes/E10_09.png" class="img-fluid" /></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/eyes/E2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/eyes/E3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/eyes/E4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/eyes/E9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/eyes/E10.png" class="img-fluid"/></div>
                         </div>
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
@@ -180,16 +178,11 @@
                     <!-- 配件 clothes -->
                     <div class="swiper dress-clothes">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C1_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C2_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C3_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C4_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C5_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C6_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C7_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C8_01.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C9_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/clothes/C10_15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/clothes/C2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/clothes/C4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/clothes/C8.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/clothes/C9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/clothes/C10.png" class="img-fluid"/></div>
                         </div>
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
@@ -211,16 +204,11 @@
                             <!-- 主體 eyes 眼睛 -->
                             <div class="swiper dress-eyes" style="z-index: 4">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E1_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E2_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E3_01.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E4_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E5_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E6_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E7_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E8_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E9_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/eyes/E10_09.png" class="img-fluid" /></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/eyes/E2.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/eyes/E3.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/eyes/E4.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/eyes/E9.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/eyes/E10.png" class="img-fluid"/></div>
                                 </div>
                             </div>
                         </div>
@@ -228,16 +216,11 @@
                             <!-- 主體 clothes 衣服 -->
                             <div class="swiper dress-clothes" style="z-index: 2">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C1_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C2_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C3_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C4_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C5_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C6_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C7_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C8_01.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C9_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/clothes/C10_15.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/clothes/C2.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/clothes/C4.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/clothes/C8.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/clothes/C9.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/clothes/C10.png" class="img-fluid"/></div>
                                 </div>
                             </div>
                         </div>
@@ -245,16 +228,11 @@
                             <!-- 主體 hair 頭髮 -->
                             <div class="swiper dress-hair">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H1_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H2_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H3_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H4_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H5_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H6_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H7_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H8_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H9_01.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/hair/H10_09.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/hair/H2.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/hair/H3.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/hair/H5.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/hair/H9.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/hair/H10.png" class="img-fluid"/></div>
                                 </div>
                             </div>
                         </div>
@@ -262,23 +240,17 @@
                             <!-- 主體 background 背景色 -->
                             <div class="swiper dress-background">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG1_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG2_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG3_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG4_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG5_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG6_25.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG7_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG8_09.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG9_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG10_15.png" class="img-fluid"/></div>
-                                    <div class="swiper-slide"><img src="assets/layers/background/BG11_01.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/background/BG1.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/background/BG2.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/background/BG3.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/background/BG4.png" class="img-fluid"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers-demo/background/BG5.png" class="img-fluid"/></div>
                                 </div>
                             </div>
                         </div>
                         <div class="main-body" style="z-index: 1">
-                            <!-- 主體 body 身體 -->
-                            <img src="assets/layers/skins/Body.png" class="img-fluid"/>
+                            <!-- 主體 skin 身體 -->
+                            <img src="assets/layers-demo/skins/Body.png" class="img-fluid"/>
                         </div>
                     </div>
 
@@ -292,16 +264,11 @@
                     <!-- 配件 hair -->
                     <div class="swiper dress-hair">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/layers/hair/H1_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H2_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H3_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H4_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H5_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H6_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H7_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H8_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H9_01.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/hair/H10_09.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/hair/H2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/hair/H3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/hair/H5.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/hair/H9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/hair/H10.png" class="img-fluid"/></div>
                         </div>
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
@@ -313,17 +280,11 @@
                     <!-- 配件 background -->
                     <div class="swiper dress-background">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/layers/background/BG1_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG2_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG3_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG4_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG5_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG6_25.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG7_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG8_09.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG9_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG10_15.png" class="img-fluid"/></div>
-                            <div class="swiper-slide"><img src="assets/layers/background/BG11_01.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/background/BG1.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/background/BG2.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/background/BG3.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/background/BG4.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers-demo/background/BG5.png" class="img-fluid"/></div>
                         </div>
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
