四格漫畫測試手機版

--- a/index.html
+++ b/index.html
@@ -87,10 +87,49 @@
 <!-- TODO: 手機版 & 補上文字 -->
 <!-- TODO: 手機版沒有hover，希望拉到可視範圍再跑圖 -->
 <div class="container text-center">
-    <div class="animate-on-hover banner-layout bg-full mb-5" style="background-image: url('assets/image/Animate_1.png')"></div>
-    <div class="animate-on-hover banner-layout bg-full mb-5" style="background-image: url('assets/image/Animate_2.png')"></div>
-    <div class="animate-on-hover banner-layout bg-full mb-5" style="background-image: url('assets/image/Animate_3.png')"></div>
-    <div class="animate-on-hover banner-layout bg-full mb-5" style="background-image: url('assets/image/Animate_4.gif')"></div>
+    <div class="row mb-5">
+        <div class="col-5">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_1.png')"></div>
+        </div>
+        <div class="col-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+                距離地球約 31800 光年的 WANA 星，閃耀著溫暖的紫黃色，瀰漫著一股天真爛漫，它的白天由一身雪白色的 Abel 精靈守護，夜晚則由紫藍色的 Nydia 精靈管理，每當黃昏時，他倆會在分身之時享受短暫美好的時光，直到某一天......
+            </p>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col-5">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_2.png')"></div>
+        </div>
+        <div class="col-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+                一道光束從天空中打落在 Nydia 身旁，原來是來自地球的人類用光束造訪，當 Abel 開心轉過身才發現，Nydia 已被嚇得無影無蹤......
+            </p>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col-5">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_3.png')"></div>
+        </div>
+        <div class="col-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+                Abel 只好將超能力賦予來造訪的人類，請求能夠幫忙尋找 Nydia 以維持 WANA 星球的正常運作。
+            </p>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col-5">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_4.png')"></div>
+        </div>
+        <div class="col-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+                Abel 陸續將金、木、水、火、土五種分別放置在 999 位超能人類身上，獲得特殊能力的人類，在外貌上也逐漸改變...
+            </p>
+        </div>
+    </div>
 </div>
 
 
