--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- 品牌動圖 -->
     <div class="join-discord-btn d-flex justify-content-center">
         <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
-            <a href="https://discord.com/channels/942427470165061673/942698736084213802" class="text-white text-decoration-none">JOIN DISCORD</a>
+            <a href="https://discord.com/channels/942427470165061673/942698736084213802" class="text-white text-decoration-none" target="_blank">JOIN DISCORD</a>
         </div>
     </div>
 </div>
@@ -79,14 +79,14 @@
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
 <div class="container-fluid text-center">
-    <h2 class="text-white banner-text-lg py-5">嘿，一起拯救WANA星球吧！</h2>
+    <h2 class="text-white banner-text-lg py-5 my-5">嘿，一起拯救WANA星球吧！</h2>
 </div>
 
 <!-- 第五部分 A&N-->
 <!-- TODO: 切換時加上transition動畫效果看起來平滑一些 -->
 <!-- TODO: 手機版 & 補上文字 -->
 <!-- TODO: 手機版沒有hover，希望拉到可視範圍再跑圖 -->
-<div class="container text-center">
+<div class="container text-start">
     <div class="row mb-5">
         <div class="col-5">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_1.png')"></div>
@@ -99,13 +99,13 @@
     </div>
 
     <div class="row mb-5">
-        <div class="col-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_2.png')"></div>
-        </div>
         <div class="col-7">
             <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
                 一道光束從天空中打落在 Nydia 身旁，原來是來自地球的人類用光束造訪，當 Abel 開心轉過身才發現，Nydia 已被嚇得無影無蹤......
             </p>
+        </div>
+        <div class="col-5">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_2.png')"></div>
         </div>
     </div>
 
@@ -121,13 +121,13 @@
     </div>
 
     <div class="row mb-5">
-        <div class="col-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_4.png')"></div>
-        </div>
         <div class="col-7">
             <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
                 Abel 陸續將金、木、水、火、土五種分別放置在 999 位超能人類身上，獲得特殊能力的人類，在外貌上也逐漸改變...
             </p>
+        </div>
+        <div class="col-5">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_4.png')"></div>
         </div>
     </div>
 </div>
@@ -135,7 +135,7 @@
 
 <!-- 第六部分 成為家族中的一員-->
 <div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-lg py-5">成為家族中的一員</h2>
+    <h2 class="text-white banner-text-lg py-5">成為獨一無二的 WANA 超能人</h2>
 </div>
 <!-- 第七部分 人物區-->
 <div class="swiper character">
@@ -153,7 +153,7 @@
 <!-- TODO 下拉三角形與作動 -->
 <div class="d-flex justify-content-center mt-5 pt-5">
     <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
-        <a href="#" class="text-white text-decoration-none px-2">怎麼加入</a>
+        <a href="https://discord.com/channels/942427470165061673/942698736084213802" class="text-white text-decoration-none px-2" target="_blank">JOIN DISCORD</a>
     </div>
 </div>
 
@@ -175,8 +175,9 @@
         <div class="col-6">
             <div class="container-fluid text-center py-5">
                 <h3 class="text-white banner-text-md">金、木、水、火、土</h3>
-                <p class="text-white banner-text-sm py-5">
-                    說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字</p>
+                <p class="text-white text-start banner-text-sm py-5">
+                    當盲盒開啟時，將會決定你屬於哪個陣營，每個屬性角色將擁有特殊能力，在之後的戰鬥與家族合作遊戲中展露頭角，快加入社群尋找你的家族夥伴吧！
+                </p>
             </div>
         </div>
     </div>
@@ -186,8 +187,8 @@
 <!-- TODO 背景底圖漸層 -->
 <div class="container-fluid text-center py-5">
     <h3 class="text-white banner-text-lg py-5">
-        更換配件，<br>
-        創造屬於你的Pixel超能人。</h3>
+        盡情更換配件，<br>
+        創造屬於你的超能人。</h3>
 </div>
 
 <!-- 第十三部分 成為家族中的一員-->
@@ -337,6 +338,16 @@
 </div>
 
 <!-- 第十四部分 成為家族中的一員-->
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-9">
+            <p class="text-white banner-text-sm py-5">
+                在 WANA 世界中，你擁有的每個配件都可以自由任意搭配，創造屬於自己獨一無二的樣式，你也可以在社群中寫下想獲得的配件樣式，快來加入我們一起創造 WANA 超能人吧！
+            </p>
+        </div>
+    </div>
+</div>
+
 <!-- 第十五部分 成為家族中的一員-->
 
 
@@ -346,54 +357,114 @@
 </div>
 
 <!-- 第十七部分 配件金字塔-->
-<div class="container-fluid full-layout bg-contain" style="background-image: url('assets/image/pyramid.png')"></div>
+<div class="container py-5">
+    <div class="row align-items-center">
+        <div class="col-6">
+            <div class="container-fluid text-center py-5">
+                <p class="text-white banner-text-sm text-start py-5">
+                    超能人包含金皮膚、水皮膚、木皮膚、火皮膚、土皮膚，有不同的髮型、眼睛、背景、服裝等，第一階段共有 205 種配件自由組合，每個 配件都有獨特的個性和風格。
+                    <br>
+                    <br>
+                    配件共分為 4 種階級，依據獲得配件稀有度可以增加超能人在家族中的地位！
+                </p>
+            </div>
+        </div>
+        <div class="col-6">
+            <img src="assets/image/rarity.gif" class="img-fluid radius-3 lighting-con"/>
+        </div>
+    </div>
+</div>
 
 <!-- 第十八部分 Roadmap、第十九部分、第二十部分、第二一部分-->
-<div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-lg py-5">Roadmap</h2>
-</div>
-<div class="container">
-    <div class="row">
+<div class="container-fluid">
+    <div class="row justify-content-center">
         <div class="col-10">
-            <div class="row align-items-center">
-                <div class="col offset-1">
-                    <img src="assets/image/phase1.png" height="127" width="134" />
-                </div>
-                <div class="col">
-                    <h3 class="text-white banner-text-md d-inline py-5">Phase 1</h3>
-                </div>
-            </div>
-        </div>
-        <div class="col-10 offset-1">
-            <p class="text-white banner-text-sm py-5">Mint 數量1000，社群會員社群會員享有投票權利，可決定 WANA 配件 2.0 樣式走向。加入社群限制：要擁有一隻人像（ 含皮膚、髮、眼、身體、背景 ）</p>
-        </div>
+            <div class="text-center bg-dark lighting-div my-5 py-3 roadmap-box radius-3">
+                <h2 class="text-white banner-text-lg py-5">Roadmap</h2>
 
-        <div class="col-10">
-            <div class="row align-items-center">
-                <div class="col">
-                    <img src="assets/image/phase2.png" height="263" width="213" />
+                <!-- 10% -->
+                <div class="row py-5 mb-3">
+                    <div class="col-12 col-lg-5">
+                        <img src="assets/image/cute_ghost_1.png" />
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
+                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">10%</h3>
+                            <ul class="text-white banner-text-sm text-start">
+                                <li>客製募資計畫：為早期投資者創造專屬WAVATAR</li>
+                                <li>區塊鏈知識推廣</li>
+                                <li>FreeMint活動進行</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
-                    <h3 class="text-white banner-text-md d-inline py-5">Phase 2</h3>
-                </div>
-            </div>
-        </div>
-        <div class="col-10 offset-1">
-            <p class="text-white banner-text-sm py-5">Mint 數量1000，社群會員社群會員享有投票權利，可決定 WANA 配件 2.0 樣式走向。加入社群限制：要擁有一隻人像（ 含皮膚、髮、眼、身體、背景 ）Mint 數量1000，社群會員社群會員享有投票權利，可決定 WANA 配件 2.0 樣式走向。加入社群限制：要擁有一隻人像（ 含皮膚、髮、眼、身體、背景 ）  </p>
-        </div>
 
-        <div class="col-10">
-            <div class="row align-items-center">
-                <div class="col">
-                    <img src="assets/image/phase3.png" height="242" width="330" />
+                <!-- 20% -->
+                <div class="row py-5 mb-3">
+                    <div class="col-12 col-lg-5">
+                        <img src="assets/image/cute_ghost_2.png" />
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
+                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">20%</h3>
+                            <ul class="text-white banner-text-sm text-start">
+                                <li>第一波鑄造 999 隻 WAVATAR 超能人：持有者享有投票權利，可決定配件 2.0 樣式走向。</li>
+                                <li>盲盒開啟後可在官網自由更換人像配件，組合出專屬於你的超能人！</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
-                    <h3 class="text-white banner-text-md d-inline py-5">Phase 3</h3>
+
+                <!-- 50% -->
+                <div class="row py-5 mb-3">
+                    <div class="col-12 col-lg-5">
+                        <img src="assets/image/cute_ghost_3.png" />
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
+                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">50%</h3>
+                            <ul class="text-white banner-text-sm text-start">
+                                <li>官網建立轉帳小工具，轉帳完成後掉落人像配件，可選擇是否購買。</li>
+                                <li>第二波鑄造，增加配件種類，打造更獨特的 NFT 頭像。</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- 75% -->
+                <div class="row py-5 mb-3">
+                    <div class="col-12 col-lg-5">
+                        <img src="assets/image/cute_ghost_4.png" />
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
+                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">75%</h3>
+                            <ul class="text-white banner-text-sm text-start">
+                                <li>打造 Web3.0 富含交易娛樂與結合 NFT 頭像之區塊鏈社群論壇：讓粉絲集中討論、獲取知識，更在平台的互動中有機會獲取獨一無二的 NFT 頭像配件！</li>
+                                <li>開發沈浸網頁遊戲，提供家族分隊遊玩，使用專屬人像在遊戲中與其他家族成員互動。</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 100% -->
+                <div class="row py-5 mb-3">
+                    <div class="col-12 col-lg-5">
+                        <img src="assets/image/cute_ghost_5.png" />
+                    </div>
+                    <div class="col-12 col-lg-7">
+                        <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
+                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">100%</h3>
+                            <ul class="text-white banner-text-sm text-start">
+                                <li>功能優化：KOL 名人專屬私人論壇，擁有名人配件即可加入獲得與偶像互動機會！</li>
+                                <li>開放使用者自由的製作人像配件，讓使用者有一同創造與營運的感受。</li>
+                                <li>啟動WANA幣，持有者可於論壇中互動來獲得。</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-        </div>
-        <div class="col-10 offset-1">
-            <p class="text-white banner-text-sm py-5">主打永續經營，買家持有 WANA NFT ，獲得利潤後，系統算利回饋給買家（稀有度越高回饋更高），獲利發送至 WANA Wallet</p>
         </div>
     </div>
 </div>
