update nav link, todo FAQ

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta name="description" content="BWANA! Create your own WAVATAR." />
     <meta property="og:title" content="BWANA! Create your own WAVATAR." />
-    <!-- <meta property="og:image" content="">-->
+     <meta property="og:image" content="https://wanawallet.co/assets/logo/WANA_LOGO.png">
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assets/lib/swiper/swiper-bundle.css">
@@ -29,14 +29,14 @@
                 <div class="d-flex flex-row">
                     <a href="#" class="navbar-brand">
                         <h1 class="d-none">WANA</h1>
-                        <img src="assets/logo/WANA_LOGO.png" height="48" alt="WANA-Logo" />
+                        <img src="assets/logo/WANA_LOGO.png" height="60" alt="WANA-Logo" />
                     </a>
 
                     <div class="d-flex flex-row align-items-center">
-                        <a class="nav-link text-white" href="#">About</a>
-                        <a class="nav-link text-white" href="#">Roadmap</a>
-                        <a class="nav-link text-white" href="#">Team</a>
-                        <a class="nav-link text-white" href="#">FAQ</a>
+                        <a class="nav-link text-white" href="#about">About</a>
+                        <a class="nav-link text-white" href="#roadmap">Roadmap</a>
+                        <a class="nav-link text-white" href="#faq">FAQ</a>
+                        <a class="nav-link disabled" href="#">Team</a>
                         <a class="nav-link disabled" href="#">Collection</a>
                         <a class="nav-link disabled" href="#">Mint</a>
                         <a class="nav-link disabled" href="#">MyWANA</a>
@@ -46,10 +46,10 @@
             </div>
             <div class="col-12 col-md-3">
                 <div class="d-flex flex-row">
-                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="32" width="32" alt="instagram"/></a>
-                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="32" width="32" alt="discord"/></a>
-                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="32" width="32" alt="twitter"/></a>
-                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="32" width="32" alt="facebook"/></a>
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
 <div class="container-fluid text-center">
-    <h2 class="text-white banner-text-lg py-5 my-5">嘿，一起拯救WANA星球吧！</h2>
+    <h2 class="text-white banner-text-lg py-5 my-5" id="about">嘿，一起拯救WANA星球吧！</h2>
 </div>
 
 <!-- 第五部分 A&N-->
@@ -140,11 +140,16 @@
 <!-- 第七部分 人物區-->
 <div class="swiper character">
     <div class="swiper-wrapper py-5">
-        <div class="swiper-slide"><img src="assets/image/try1.png" class="character-img"/></div>
-        <div class="swiper-slide"><img src="assets/image/try2.png" class="character-img"/></div>
-        <div class="swiper-slide"><img src="assets/image/try3.png" class="character-img"/></div>
-        <div class="swiper-slide"><img src="assets/image/try4.png" class="character-img"/></div>
-        <div class="swiper-slide"><img src="assets/image/try5.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web1.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web2.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web3.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web4.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web5.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web6.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web7.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web8.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web9.png" class="character-img"/></div>
+        <div class="swiper-slide"><img src="assets/image/web10.png" class="character-img"/></div>
     </div>
 </div>
 
@@ -158,12 +163,9 @@
 </div>
 
 <!-- 第九部分 成為WANA Pixel超人後，你擁有的超能力！獲得家族皮膚，跟你的家族夥伴一同奮戰！-->
-<div class="container-fluid text-center py-5">
-    <h3 class="text-white banner-text-lg">
-        成為 WANA Pixel 超能人後， <br>
-        你擁有的能力！</h3>
-    <h3 class="text-white banner-text-md py-5">
-        獲得家族皮膚，跟你的家族夥伴一同奮戰！</h3>
+<div class="container-fluid text-center py-5 my-5">
+    <h3 class="text-white banner-text-lg">你擁有的能力！</h3>
+    <h3 class="text-white banner-text-md">獲得家族皮膚，跟你的家族夥伴一同奮戰！</h3>
 </div>
 
 <!-- 第十部分 五角形的圖、第十一部分 金木水火土-->
@@ -185,7 +187,7 @@
 
 <!-- 第十二部分 創造屬於你的Pixel超能人-->
 <!-- TODO 背景底圖漸層 -->
-<div class="container-fluid text-center py-5">
+<div class="container-fluid text-center py-5 my-5">
     <h3 class="text-white banner-text-lg py-5">
         盡情更換配件，<br>
         創造屬於你的超能人。</h3>
@@ -369,14 +371,14 @@
                 </p>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 text-center">
             <img src="assets/image/rarity.gif" class="img-fluid radius-3 lighting-con"/>
         </div>
     </div>
 </div>
 
 <!-- 第十八部分 Roadmap、第十九部分、第二十部分、第二一部分-->
-<div class="container-fluid">
+<div class="container-fluid" id="roadmap">
     <div class="row justify-content-center">
         <div class="col-10">
             <div class="text-center bg-dark lighting-div my-5 py-3 roadmap-box radius-3">
@@ -524,44 +526,20 @@
 </div>
 
 <!-- 第二四部分 FAQ-->
-<div class="container-fluid text-center py-5">
+<div class="container-fluid text-center py-5" id="faq">
     <h2 class="text-white banner-text-lg">FAQ</h2>
 </div>
 <!-- 第二五部分 answer-->
 <div class="container">
-    <div class="row justify-content-around text-center mb-3">
-        <div class="col-12 col-lg-6 my-4">
-            <div class="bg-white faq-box py-4 mx-4">
-                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+    <div class="row mb-3">
+        <div class="col-12 my-4">
+            <div class="bg-white faq-box py-4 mx-4 px-5">
+                <a href="#" class="text-base banner-text-md d-inline text-decoration-none">Q1. 關於我們？</a>
             </div>
         </div>
-        <div class="col-12 col-lg-6 my-4">
-            <div class="bg-white faq-box py-4 mx-4">
-                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-around text-center mb-3">
-        <div class="col-12 col-lg-6 my-4">
-            <div class="bg-white faq-box py-4 mx-4">
-                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
-            </div>
-        </div>
-        <div class="col-12 col-lg-6 my-4">
-            <div class="bg-white faq-box py-4 mx-4">
-                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-around text-center mb-3">
-        <div class="col-12 col-lg-6 my-4">
-            <div class="bg-white faq-box py-4 mx-4">
-                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
-            </div>
-        </div>
-        <div class="col-12 col-lg-6 my-4">
-            <div class="bg-white faq-box py-4 mx-4">
-                <h3 class="text-base banner-text-md d-inline">Q1. 關於我們？</h3>
+        <div class="col-12 my-4">
+            <div class="bg-white faq-box py-4 mx-4 px-5">
+                <a href="#" class="text-base banner-text-md d-inline text-decoration-none">Q1. 關於我們？</a>
             </div>
         </div>
     </div>
@@ -576,26 +554,26 @@
                     <div class="d-flex flex-row">
                         <a href="#" class="footer-brand">
                             <h1 class="d-none">WANA</h1>
-                            <img src="assets/logo/WANA_LOGO.png" height="48" alt="WANA-Logo" />
+                            <img src="assets/logo/WANA_LOGO.png" height="60" alt="WANA-Logo" />
                         </a>
 
                         <div class="d-flex flex-row align-items-center">
-                            <a class="nav-link text-white" href="#">About</a>
-                            <a class="nav-link text-white" href="#">Roadmap</a>
-                            <a class="nav-link text-white" href="#">Team</a>
-                            <a class="nav-link text-white" href="#">FAQ</a>
-                            <a class="nav-link text-white" href="#">Collection</a>
-                            <a class="nav-link text-white" href="#">Mint</a>
-                            <a class="nav-link text-white" href="#">MyWANA</a>
+                            <a class="nav-link text-white" href="#about">About</a>
+                            <a class="nav-link text-white" href="#roadmap">Roadmap</a>
+                            <a class="nav-link text-white" href="#faq">FAQ</a>
+                            <a class="nav-link disabled" href="#">Team</a>
+                            <a class="nav-link disabled" href="#">Collection</a>
+                            <a class="nav-link disabled" href="#">Mint</a>
+                            <a class="nav-link disabled" href="#">MyWANA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3">
                     <div class="d-flex flex-row">
-                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="32" width="32" alt="instagram"/></a>
-                        <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="32" width="32" alt="discord"/></a>
-                        <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="32" width="32" alt="twitter"/></a>
-                        <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="32" width="32" alt="facebook"/></a>
+                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
+                        <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
+                        <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
+                        <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
                     </div>
                 </div>
                 <hr style color=white, size="2">
