--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="d-flex flex-row">
                     <a href="#" class="navbar-brand">
                         <h1 class="d-none">WANA</h1>
-                        <img src="assets/logo/WANA_LOGO.png" height="60" alt="WANA-Logo" />
+                        <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
                     </a>
 
                     <div class="d-flex flex-row align-items-center">
@@ -531,30 +531,105 @@
 </div>
 <!-- 第二五部分 answer-->
 <div class="container">
-    <div class="row mb-3">
-        <div class="col-12 my-4">
-            <div class="bg-white faq-box py-4 mx-4 px-5">
-                <a href="#" class="text-base banner-text-md d-inline text-decoration-none">Q1. 關於我們？</a>
+    <ul class="row mb-3">
+        <li class="col-12 my-4">
+            <div class="card bg-white faq-box py-4 mx-4">
+                <a href="#faq_1" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                   data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
+                <div class="collapse" id="faq_1">
+                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                        <p>
+                            WANA 是位在 Sol 鏈上的一顆星球，通過擁有我們的 NFT 可以進入 Web3.0 新世界的旅程來創新，一種自由與包容的共同創造體驗，和我們一起創造宇宙吧！
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-12 my-4">
-            <div class="bg-white faq-box py-4 mx-4 px-5">
-                <a href="#" class="text-base banner-text-md d-inline text-decoration-none">Q1. 關於我們？</a>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white faq-box py-4 mx-4">
+                <a href="#faq_2" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                   data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
+                <div class="collapse" id="faq_2">
+                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                        <p>
+                            待定。
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white faq-box py-4 mx-4">
+                <a href="#faq_3" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                   data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
+                <div class="collapse" id="faq_3">
+                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                        <p>
+                            Mint價格第一波為1 SOL。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white faq-box py-4 mx-4">
+                <a href="#faq_4" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                   data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
+                <div class="collapse" id="faq_4">
+                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                        <p>
+                            作為NFT持有者，您可以擁有屬於自己鏈上的NFT，可以選擇持有或販售，在未來路線圖規劃，您將可以替NFT更換您喜愛的造型、依造型算力獲得豐厚獎勵。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white faq-box py-4 mx-4">
+                <a href="#faq_5" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                   data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
+                <div class="collapse" id="faq_5">
+                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                        <p>
+                            你可以在Solana Art上購買。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white faq-box py-4 mx-4">
+                <a href="#faq_6" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                   data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
+                <div class="collapse" id="faq_6">
+                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                        <p>
+                            1、切勿與任何人分享您的私鑰或助記詞。<br>
+                            2、切勿單擊通過 Discord、Twitter 或其他渠道上的直接消息發送給您的網址。<br>
+                            3、僅信任在本網站或官方 Discord 服務器上頻道中發布的官方信息。<br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+    </ul>
 </div>
 
 </body>
 <footer>
     <nav class="container-fluid footer">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12 col-md-9">
-                    <div class="d-flex flex-row">
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-flex flex-row justify-content-center">
                         <a href="#" class="footer-brand">
-                            <h1 class="d-none">WANA</h1>
-                            <img src="assets/logo/WANA_LOGO.png" height="60" alt="WANA-Logo" />
+                            <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
                         </a>
 
                         <div class="d-flex flex-row align-items-center">
@@ -568,8 +643,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
-                    <div class="d-flex flex-row">
+                <div class="col-12">
+                    <div class="d-flex flex-row justify-content-center">
                         <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
                         <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
                         <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
@@ -577,7 +652,8 @@
                     </div>
                 </div>
                 <hr style color=white, size="2">
-                <div class="row align-items-center">
+                <hr class="text-white">
+                <div class="row text-center">
                     <a class ="text-white">@ 2022 WANA</a>
                 </div>
             </div>
