footer done, todo some logo...

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     </div>
 
     <div class="row d-block d-xl-none">
-        <div class="col-8 offset-2 collapse bg-base py-3 py-sm-5" id="hamburgerMenu">
+        <div class="col-6 col-lg-4 offset-3 offset-lg-4 collapse bg-base py-3 py-sm-5" id="hamburgerMenu">
             <a href="#" class="navbar-brand">
                 <img src="assets/logo/LOGO-W.png" class="img-fluid" alt="WANA-Logo" />
             </a>
-            <ul class="text-center py-3 py-sm-5">
+            <ul class="d-flex flex-column list-unstyled menu text-center mt-3 py-3 py-sm-5">
                 <li><a class="nav-link text-white" href="#about">About</a></li>
                 <li><a class="nav-link text-white" href="#roadmap">Roadmap</a></li>
                 <li><a class="nav-link text-white" href="#faq">FAQ</a></li>
@@ -641,43 +641,61 @@
 </div>
 
 </body>
-<footer>
-    <nav class="container-fluid footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="d-flex flex-row justify-content-center">
-                        <a href="#" class="footer-brand">
-                            <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
-                        </a>
+<footer class="bg-foot">
+    <div class="container-fluid d-none d-xl-block">
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex flex-row justify-content-center">
+                    <a href="#" class="footer-brand">
+                        <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
+                    </a>
 
-                        <div class="d-flex flex-row align-items-center">
-                            <a class="nav-link text-white" href="#about">About</a>
-                            <a class="nav-link text-white" href="#roadmap">Roadmap</a>
-                            <a class="nav-link text-white" href="#faq">FAQ</a>
-                            <a class="nav-link disabled" href="#">Team</a>
-                            <a class="nav-link disabled" href="#">Collection</a>
-                            <a class="nav-link disabled" href="#">Mint</a>
-                            <a class="nav-link disabled" href="#">MyWANA</a>
-                        </div>
+                    <div class="d-flex flex-row align-items-center">
+                        <a class="nav-link text-white" href="#about">About</a>
+                        <a class="nav-link text-white" href="#roadmap">Roadmap</a>
+                        <a class="nav-link text-white" href="#faq">FAQ</a>
+                        <a class="nav-link disabled" href="#">Team</a>
+                        <a class="nav-link disabled" href="#">Collection</a>
+                        <a class="nav-link disabled" href="#">Mint</a>
+                        <a class="nav-link disabled" href="#">MyWANA</a>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="d-flex flex-row justify-content-center">
-                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
-                        <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
-                        <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
-                        <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
-                    </div>
-                </div>
-                <hr>
-                <hr class="text-white">
-                <div class="row text-center">
-                    <a class ="text-white">@ 2022 WANA</a>
+            </div>
+            <div class="col-12">
+                <div class="d-flex flex-row justify-content-center">
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
                 </div>
             </div>
         </div>
-    </nav>
+
+    </div>
+    <div class="container-fluid d-block d-xl-none">
+        <div class="row">
+            <div class="col-6 col-lg-4 offset-3 offset-lg-4 pt-3 pt-sm-5">
+                <div class="row justify-content-center">
+                    <div class="col-3">
+                        <img src="assets/logo/WANA_LOGO.png" class="img-fluid" alt="WANA-Logo" />
+                    </div>
+                </div>
+                <ul class="d-flex flex-column list-unstyled footer-menu text-center mt-3 pt-3 pt-sm-5">
+                    <li><a class="nav-link text-white" href="#about">About</a></li>
+                    <li><a class="nav-link text-white" href="#roadmap">Roadmap</a></li>
+                    <li><a class="nav-link text-white" href="#faq">FAQ</a></li>
+                    <li><a class="nav-link disabled" href="#">Team</a></li>
+                    <li><a class="nav-link disabled" href="#">Collection</a></li>
+                    <li><a class="nav-link disabled" href="#">Mint</a></li>
+                    <li><a class="nav-link disabled" href="#">MyWANA</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <hr class="text-white">
+    <div class="row text-center">
+        <div class ="text-white">@ 2022 WANA</div>
+    </div>
 </footer>
 </html>
 
