Add dress preview hint

--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@
         創造屬於你的超能人。</h3>
 </div>
 
+<div class="container text-danger banner-text-h2 d-lg-none">
+    <div class="row justify-content-center text-center">
+        <div class="col">
+            (換裝體驗僅提供電腦版裝置)<br>
+        </div>
+    </div>
+</div>
+
 <!-- 第十三部分 成為家族中的一員-->
 <div class="container d-none d-lg-block py-5 my-5">
     <div class="row py-5">
